--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -1,6 +1,6 @@
 {% load static %}
 <header>
     <div style="text-align: center;">
-       <a href="{% url 'website:home' %}"> <img src="{% static 'images/logo.png' %}" alt="Online Cushion Store"></a>
+       <a id="logo" href="{% url 'website:home' %}"> <img class="my-4 mx-auto" style="width: 170px;" src="{% static 'images/deeperLifeMarriages.png' %}" alt="Online Cushion Store"></a>
     </div>
 </header>
