--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -6,7 +6,7 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <i class="fas fa-bars text-white"></i>
     </button>
-    <a id="logoNavbar" class="navbar-brand mx-auto mr-3" href="{% url 'website:home' %}"> <img class=" mx-auto" style="width: 170px;" src="{% static 'images/deeperLifeMarriages.png' %}" alt="Online Cushion Store"></a>
+    <a id="logoNavbar" class="navbar-brand mx-auto mr-3" href="{% url 'website:home' %}"> <img class=" mx-auto" style="width: 170px;" src="{% static 'images/HS.png' %}" alt="Online Cushion Store"></a>
     <a class="navbar-brand" href="#"><img src=""></a>
     <i  id="searchIconMobile" class="fas fa-search"></i>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -16,7 +16,7 @@
         {%for link in links%}
        
         <li class="nav-item">
-          <a  class=" active" aria-current="page" href="#">{{link.name}}</a>
+          <a href="{% url 'website:category_detail' link.slug %}"   class=" active" aria-current="page" >{{link.name}}</a>
         </li>
 
         <div id="block" class="">
