--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -1,6 +1,6 @@
 {% load static %}
 <header>
     <div style="text-align: center;">
-       <a id="logo" href="{% url 'website:home' %}"> <img class="my-4 mx-auto" style="width: 250px;" src="{% static 'images/HS.png' %}" alt="Online Cushion Store"></a>
+       <a style=""  id="logo" href="{% url 'website:home' %}"> <img class="my-4 mx-auto" style="width: 250px;" src="{% static 'images/HS.png' %}" alt="Online Cushion Store"></a>
     </div>
 </header>
