--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,29 +1,54 @@
-/*   */
-/*  navbatr  */
-
-
-#searchIconMobile {
-  display: none;
-}
-#navbarMain {
-  background-color: #f4f5f5;
-  margin-top: -1px;
-}
-#logoNavbar {
-  display: none;
-}
-
 #navbarContent li {
-  margin-left: 12px;
+  margin-left: 28px;
   font-weight: 300;
 }
-
-#block {
+.logo {
   display: block;
 }
 
-#block:hover {
+.forEachRowHomePageTextHeaderMobile {
+  font-family: "Playfair Display", serif;
 }
+
+.homePageWhatImage:hover {
+  filter: brightness(70%);
+}
+.forEachRowHomePageTextHeaderMobile {
+  transition: 0.2s ease-in-out;
+}
+
+.forEachRowHomePageTextHeaderMobile:hover {
+  opacity: 60%;
+  text-decoration: underline;
+}
+.homePageWhatHeaderText:hover {
+  text-decoration: underline;
+}
+
+.forEachRowImageMobile {
+  transition: 0.2s ease-in-out;
+  overflow: hidden;
+}
+.forEachRowImageMobile:hover {
+  filter: brightness(110%);
+}
+
+.homePageWhatImage {
+  transition: 0.2s ease-in-out;
+}
+.homePageWhatHeaderText {
+  transition: 0.2s ease-in-out;
+}
+
+#navbarMain {
+  background-color: #f4f5f5;
+  margin-top: -1px;
+  color: black;
+}
+#navbarContent li a {
+  color: black !important;
+}
+
 #navbarContent li a {
   color: black;
   font-size: 12px;
@@ -33,8 +58,53 @@
   text-decoration: none;
 }
 #navbarContent li a:hover {
-  color: #c92020;
+  color: #c92020 !important;
 }
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap");
+.forEachRowHomePageTextHeaderMobile {
+  font-family: "Soure Sans Pro", sans-serif;
+}
+
+/* /*  
+/*  navbatr  */
+
+/* body{
+  overflow-x: hidden;
+}
+#searchIconMobile {
+  display: none;
+}
+
+.text_hover{
+
+  transition: ease-in-out .095s;
+}
+.text_hover:hover{
+
+  opacity: 80%;
+
+
+
+}
+
+.text_hover_image{
+
+
+}
+
+
+
+
+
+
+
+#block {
+  display: block;
+}
+
+#block:hover {
+}
+
 
 #homeImages {
   width: 365px;
@@ -50,10 +120,19 @@
   font-size: 13px;
   font-weight: 30 !important;
 }
-/* DESKTOP RESPONSIVE */
+DESKTOP RESPONSIVE
 @media only screen and (min-width: 769px) {
 
+
+
+  body{
+    overflow-x: hidden;
+  }
+
+
+
   
+ 
 .homeImagesPost{
 
     width: 800px !important;
@@ -62,6 +141,11 @@
  
    
    
+
+  }
+
+  #homeImages{
+
 
   }
   #newsletter_button{
@@ -139,17 +223,48 @@ object-fit: cover;
   height: 300px;
 }
 
+/* POST.HTML */
+/* DESKTOP */
+
+/* 
+.postDesktopCreatedText{
+  margin-left: -100px !important;
+}
+.postDesktopCreatedMinuteBrandText{
+  
+  font-size: 8px !important;
+  text-transform: uppercase !important;
+}
+.postDesktopMinuteText{
+
+  opacity: 90% !important;
+  color: rgba(0, 0, 0, 0.301) !important;
+  margin-left: -80px !important;
+
+}
+
+.postDesktopBrandText{
+ 
+  
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: 500 !important;
+
+
+
+}
+
 }
 @media only screen and (max-width: 765px) {
 
 
 
-}
+} */
 
 /* MOBILE RESPONSIVE */
-@media only screen and (max-width: 765px) {
+/* @media only screen and (max-width: 765px) {
   /* WHAT WE DO */
-  #whatwedorow{
+/* #whatwedorow{
 
     padding-bottom: 20px;
     display: flex;
@@ -170,23 +285,21 @@ object-fit: cover;
   
 
 
-  }
+  } */
 
-
-
-  /* Facebook Page */
-  #recommended_text{
+/* Facebook Page */
+/* #recommended_text{
     font-size: 15px;
     padding-bottom: 30px;
     font-weight: bolder;
     padding-top: 30px;
     
 
-  }
+  } */
 
-  /* MOBILE What we do */
+/* MOBILE What we do */
 
-  #whatWeDoRow{
+/* #whatWeDoRow{
 
     padding: 20px 0;
 
@@ -209,10 +322,10 @@ object-fit: cover;
     min-width: 100% !important;
     max-width: 100% !important;
     padding-right:50px !important;
-    padding-left:20px !important;
-    /* padding-left: 19px !important;
+    padding-left:20px !important; */
+/* padding-left: 19px !important;
     padding-top: 41px; */
-  }
+/* }
   #whatwedorow {
 
     display: none;
@@ -223,11 +336,11 @@ object-fit: cover;
     }
   #homeImages {
    
-    width: 92.0vw !important;
+    width: 94.0vw !important;
     height: auto;
-    padding-top: 40px;
+    padding-top: 30px;
     
-    margin: auto !important;
+    margin-left: -20px;
 
     
   }
@@ -270,7 +383,7 @@ object-fit: cover;
     padding: 0.5%;
   }
   #navbarMain {
-    background-color: #c92020;
+    background-color: #f4f5f5;
   }
 
   #searchIconMobile {
@@ -304,5 +417,743 @@ object-fit: cover;
    
     
   }
+
+
+  .mobile_h3{
+
+    font-size: 40px;
   }
 
+  .created{
+    margin-left: -30px;
+  }
+  .text{
+    
+    font-size: 8px;
+    text-transform: uppercase;
+  }
+ .min{
+
+    opacity: 20%;
+    color: rgba(0, 0, 0, 0.301);
+    margin-left: -45px;
+
+
+  }
+
+  .homeImagesPost{
+    padding-bottom: 60px;
+  }
+
+  #newsletter_button{
+
+  }
+  #newsletter_input{
+    padding: 5px;
+    width: 250px;
+    border: none;
+  }
+  #newsletter_header{
+    font-size: 15px;
+    width: 60%;
+  }
+  #color{
+    margin-top: 40px ;
+    background-color: lightcoral;
+    width: 90vw;
+    height: 70vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-left: 25px;
+
+  }
+
+  .cat_name{
+    padding-top: 40px;
+
+    font-family: 'Source Sans Pro', sans-serif;
+  }
+
+  .posts{
+
+    opacity: 20%;
+    color: rgba(0, 0, 0, 0.616);
+    font-size: 10px;
+    padding-bottom: 15px;
+   
+
+
+  }
+
+  .homeImagesCat{
+
+    padding-top: 20px;
+    width: 94vw !important;
+    margin-left: -10px;
+
+    
+  }
+  .email{
+    display: none;
+  }
+  .recommended_text{
+
+    margin-left: 140px;
+  }
+
+  .kumuyi{
+
+    margin-left: 70px;
+  }
+  .title_text_cat{
+
+
+
+
+    
+
+    font-family: 'Source Sans Pro', sans-serif;
+  
+    font-size: 21px;
+    font-weight: 600;
+    opacity: 90%;
+    padding-bottom: 64px;;
+    max-width: 100vw;
+
+    border-bottom: 1px solid #dad3cc;
+
+
+   
+    
+ 
+
+
+
+  }
+
+  #homeImages{
+    margin-left: -10px;
+  }
+
+  .homePageImages{
+
+    margin-left: -20px !important;
+  }
+
+  .ny-footer{
+
+padding: 40px;
+
+  } */
+
+/* PRODUCT.HTML */
+/* MOBILE */
+
+/* }  */
+
+/* HOMEPAGE */
+/* DESKTOP ONLY */
+
+/* MOBILE ONLY */
+@media only screen and (max-width: 765px) {
+  /* ENTIRE PAGE */
+  .homePageFirstSection {
+    display: flex;
+    flex-direction: column;
+    overflow-x: hidden !important;
+  }
+  body {
+    overflow-x: hidden !important;
+  }
+
+  /* SECTION - FIRST ROW */
+  .forEachRowHomePageMobile {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .forEachRowImageMobile {
+    padding-top: 6vh;
+    width: 90vw;
+    height: auto !important;
+  }
+  .forEachRowHomePageTextMobile {
+    max-width: inherit;
+    padding: 0 2vw;
+  }
+  .forEachRowHomePageCategorytMobile {
+    padding-top: 4vh;
+    text-transform: uppercase;
+    font-size: 9px;
+    padding-bottom: 1vh;
+  }
+  .forEachRowHomePageTextHeaderMobile {
+    border-bottom: 1px solid #dee2e6 !important;
+    padding-bottom: 6vh;
+  }
+
+  /* FACEBOOK SECTION */
+
+  .homePageFacebookSection {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .facebookSection {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .facebookHeaderText {
+    float: left !important;
+    font-size: 13px;
+    font-weight: bold;
+    padding-top: 5vh;
+    padding-bottom: 3vh;
+  }
+
+  /* WHAT WE DO SECTION */
+
+  .homePageWhatSection {
+    display: flex;
+    flex-direction: column;
+    width: 94vw;
+  }
+  .homePageWhatImage {
+    width: 20vw;
+    height: auto;
+  }
+
+  .homePageWhatHeaderText {
+    font-size: 10px;
+    width: 94vw;
+    padding-left: 13px;
+  }
+  .homePageWhatH1 {
+    float: left !important;
+    font-size: 13px;
+    font-weight: bold;
+    padding-top: 5vh;
+    padding-bottom: 3vh;
+  }
+
+  .homePageWhatRow {
+    display: flex;
+
+    align-items: center;
+
+    padding-bottom: 2vh;
+  }
+
+  /* NEED TO REACH US */
+  .homePageNeedReachUsH1 {
+    float: left !important;
+    font-size: 13px;
+    font-weight: bold;
+    padding-top: 5vh;
+    padding-bottom: 3vh;
+  }
+
+  /* NEWSLETTER SECTION */
+
+  .homePageNewsLetterSection {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .homePageNewsLetterBackground {
+    margin-top: 40px;
+    background-color: #c92020;
+    width: 90vw;
+    height: 27vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .homePageNewsLetterHeader {
+    font-size: 13px;
+    width: 80%;
+    font-weight: bold;
+    padding-bottom: 15px;
+    color: white;
+  }
+  .homePageNewsLetterInput {
+    width: 80%;
+    height: 20%;
+    border: none;
+  }
+
+  .homePageNewsLetterButton {
+    width: 40vw;
+    font-size: 14px;
+  }
+}
+
+/* LAPTOP ONLY */
+@media only screen and (max-width: 1024px) and (min-width: 766px) {
+  /* SECTION - FIRST ROW */
+  #logoNavbar {
+    display: none;
+  }
+
+  .container-md {
+    max-width: 95%;
+    align-self: center;
+  }
+
+  .homePageFirstSection {
+    width: 90vw;
+  }
+  .forEachRowImageMobile {
+    width: 42vw;
+  }
+  .forEachRowHomePageTextMobile {
+    padding-left: 6vw;
+  }
+
+  .forEachRowHomePageCategorytMobile {
+    padding-top: 0.5vh;
+    text-transform: uppercase;
+    font-size: 9px;
+  }
+  .forEachRowHomePageMobile {
+    padding-bottom: 5vh;
+  }
+  .homePageFirstSection2Outer {
+  }
+
+  .forEachRowHomePageTextHeaderMobile {
+    width: 40vw;
+    padding-bottom: 5vh;
+  }
+
+  .homePageFirstSection2 {
+    display: flex;
+    padding-top: 5vh;
+
+    border-bottom: 1px solid #dee2e6 !important;
+    justify-content: center;
+  }
+
+  /* FACEBOOK /NEWSLETTER /WHAT WE /DO FIND US */
+
+  /* TABLET */
+
+  /* SECTION OUTER-INNER-ONE TABLET */
+
+  .homePageTabletSectionOne {
+    width: 30vw;
+    display: inline-block;
+  }
+
+  /* FACEBOOK */
+
+  .homePageFacebookSection {
+    display: none;
+  }
+  /* WHAT WE DO SECTION */
+  .homePageWhatSection {
+    display: flex;
+    flex-direction: column;
+    width: 40vw;
+  }
+  .homePageWhatImage {
+    width: 20vw;
+    height: auto;
+  }
+
+  .homePageWhatHeaderText {
+    font-size: 10px;
+    width: 44vw;
+    padding-left: 13px;
+  }
+  .homePageWhatH1 {
+    float: left !important;
+    font-size: 13px;
+    font-weight: bold;
+    padding-top: 5vh;
+    padding-bottom: 3vh;
+    margin: 0 auto;
+  }
+
+  .homePageWhatRow {
+    display: flex;
+
+    align-items: center;
+    padding-bottom: 2vh;
+  }
+
+  /* NEWS SECTION */
+  .homePageNewsLetterSection {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .homePageNewsLetterBackground {
+    margin-top: 40px;
+    background-color: #c92020;
+    width: 50vw;
+    height: 27vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .homePageNewsLetterHeader {
+    font-size: 13px;
+    width: 80%;
+    font-weight: bold;
+    padding-bottom: 15px;
+    color: white;
+  }
+  .homePageNewsLetterInput {
+    width: 80%;
+    height: 20%;
+    border: none;
+  }
+
+  .homePageNewsLetterButton {
+    width: 20vw;
+    font-size: 14px;
+  }
+
+  /* OUTER TABLES SECTIOIN  */
+
+  .homePageTabletSectionOuter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media only screen and (max-width: 991px) {
+  #logo {
+    display: none;
+  }
+  #logoNavbar {
+    display: block;
+  }
+}
+
+/* DESKTOPS ONLY */
+@media only screen and (max-width: 1200px) and (min-width: 1025px) {
+  #logoNavbar {
+    display: none;
+  }
+
+  .container-md {
+    max-width: 950px;
+  }
+  .outer {
+    display: flex;
+    justify-content: space-between;
+  }
+  /* FIRST SECTION */
+
+  .homePageFirstSection {
+  }
+  .forEachRowImageMobile {
+    width: 22vw;
+  }
+
+  .forEachRowHomePageTextMobile {
+    padding-left: 3vw;
+  }
+
+  .forEachRowHomePageCategorytMobile {
+    padding-top: 0.5vh;
+    text-transform: uppercase;
+    font-size: 9px;
+  }
+  .forEachRowHomePageMobile {
+    padding-bottom: 5vh;
+  }
+
+  .forEachRowHomePageTextHeaderMobile {
+    width: 25vw;
+    padding-bottom: 5vh;
+    font-size: 19px;
+  }
+  .homePageFirstSection2Outer {
+  }
+  .homePageFirstSection2 {
+    display: flex;
+    padding-top: 5vh;
+
+    border-bottom: 1px solid #dee2e6 !important ;
+    justify-content: center;
+  }
+  /* DESKTOP SECTIONS */
+  .firstSectionDesktop {
+    display: inline-block !important;
+  }
+  .secondSectionDesktop {
+    display: inline-block !important;
+    width: 33%;
+    vertical-align: top;
+    float: right;
+  }
+
+  /* FACEBOOK SECTION */
+
+  .facebookWidth {
+    width: 10vw;
+  }
+
+  .homePageFacebookSection .facebookHeaderText {
+    display: inline-block;
+    font-weight: bold;
+    padding-top: 5vh;
+    padding-bottom: 3vh;
+    font-size: 13px;
+  }
+
+  .homePageFacebookSection {
+    width: 40%;
+  }
+
+  .facebookSection {
+    width: 30%;
+  }
+
+  .homePageFacebookSection .facebookHeaderText {
+    display: inline-block;
+    font-weight: bold;
+    padding-top: 5vh;
+    padding-bottom: 3vh;
+  }
+
+  /* WHAT WE DO SECGTION */
+
+  .homePageWhatImage {
+    width: 10vw;
+    height: auto;
+  }
+
+  .homePageWhatRow {
+    display: flex;
+    padding-bottom: 14px;
+    align-items: center;
+  }
+
+  .homePageWhatH1 {
+    font-size: 13px;
+    font-weight: bold;
+    padding-top: 5vh;
+    padding-bottom: 3vh;
+    margin: 0 auto;
+  }
+  .homePageWhatSection {
+    font-family: "Source Sans Pro", sans-serif;
+  }
+
+  /* NEWSLETTER SECTION */
+
+  .homePageNewsLetterSection {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    float: left;
+  }
+
+  .homePageNewsLetterBackground {
+    margin-top: 40px;
+    background-color: #c92020;
+    width: 23vw;
+    height: 27vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .homePageNewsLetterHeader {
+    font-size: 13px;
+    width: 30%;
+    font-weight: bold;
+    padding-bottom: 15px;
+    color: white;
+  }
+  .homePageNewsLetterInput {
+    width: 30%;
+    height: 20%;
+    border: none;
+  }
+
+  .homePageNewsLetterButton {
+    width: 20vw;
+    font-size: 14px;
+  }
+}
+
+/* FULLSCREEN 😎 */
+@media only screen and (min-width: 1201px) {
+  #logoNavbar {
+    display: none;
+  }
+
+  .container-md {
+    max-width: 80%;
+  }
+  .outer {
+    display: flex;
+    justify-content: space-between;
+  }
+  /* FIRST SECTION */
+
+  .homePageFirstSection {
+  }
+  .forEachRowImageMobile {
+    width: 22vw;
+  }
+
+  .forEachRowHomePageTextMobile {
+    padding-left: 3vw;
+  }
+
+  .forEachRowHomePageCategorytMobile {
+    padding-top: 0.5vh;
+    text-transform: uppercase;
+    font-size: 9px;
+  }
+  .forEachRowHomePageCategorytMobileSeperate {
+    font-size: 35px !important;
+  }
+  .forEachRowHomePageMobile {
+    padding-bottom: 5vh;
+  }
+
+  .forEachRowHomePageTextHeaderMobile {
+    width: 25vw;
+    padding-bottom: 5vh;
+    font-size: 22px;
+  }
+  .homePageFirstSection2Outer {
+  }
+  .homePageFirstSection2 {
+    display: flex;
+    padding-top: 5vh;
+
+    border-bottom: 1px solid #dee2e6 !important ;
+    justify-content: center;
+  }
+  /* DESKTOP SECTIONS */
+  .firstSectionDesktop {
+    display: inline-block !important;
+  }
+  .secondSectionDesktop {
+    display: inline-block !important;
+    width: 33%;
+    vertical-align: top;
+    float: right;
+  }
+
+  /* FACEBOOK SECTION */
+
+  .facebookWidth {
+    width: 10vw;
+  }
+
+  .homePageFacebookSection .facebookHeaderText {
+    font-weight: bold;
+    padding-top: 5vh;
+    padding-bottom: 3vh;
+    font-size: 13px;
+  }
+
+  .homePageFacebookSection {
+    width: 40%;
+  }
+
+  .facebookSection {
+    width: 30%;
+  }
+
+  .homePageFacebookSection .facebookHeaderText {
+    display: inline-block;
+    font-weight: bold;
+    padding-top: 5vh;
+    padding-bottom: 3vh;
+  }
+
+  /* WHAT WE DO SECGTION */
+
+  .homePageWhatImage {
+    width: 6vw;
+    height: auto;
+  }
+
+  .homePageWhatRow {
+    display: flex;
+    padding-bottom: 14px;
+    align-items: center;
+  }
+  .homePageWhatHeaderText {
+    padding-left: 10px;
+    font-size: 13px;
+  }
+  .homePageWhatH1 {
+    font-size: 13px;
+    font-weight: bold;
+    padding-top: 5vh;
+    padding-bottom: 3vh;
+    margin: 0 auto;
+  }
+
+  .homePageWhatSection {
+    font-family: "Lato", sans-serif;
+    font-weight: bold;
+  }
+
+  /* NEWSLETTER SECTION */
+
+  .homePageNewsLetterSection {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    float: left;
+  }
+
+  .homePageNewsLetterBackground {
+    margin-top: 40px;
+    background-color: #c92020;
+    width: 23vw;
+    height: 27vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .homePageNewsLetterHeader {
+    font-size: 13px;
+    width: 30%;
+    font-weight: bold;
+    padding-bottom: 15px;
+    color: white;
+  }
+  .homePageNewsLetterInput {
+    width: 30%;
+    height: 20%;
+    border: none;
+  }
+
+  .homePageNewsLetterButton {
+    width: 20vw;
+    font-size: 14px;
+  }
+
+  nav {
+    height: 49px;
+  }
+
+  #logo {
+    display: block;
+  }
+}
