--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="{% block metadescription %}{% endblock %}" />
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link rel="stylesheet" href="{% static 'css/home.css' %}" />
+  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" crossorigin="anonymous">
     
@@ -18,21 +18,20 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-  <div class="container-fluid navbar-fixed-top my_top_navbar_div">
-        {% include 'header.html' %} 
-    </div>
-    <div class="">
-      
+  <div class="container-fluid navbar-fixed-top my_top_navbar_div p-0">
+        {% include 'header.html' %}    
       {% include 'navbar.html' %} 
-    </div>
+  
 
     {% block content %}
     {% endblock %}
-    
+      </div>
   
   {% include 'footer.html' %}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v10.0" nonce="XYmdf9N7"></script>
 </body>
+
 
 </html>
