newsletter and font change

--- a/website/templates/website/category.html
+++ b/website/templates/website/category.html
@@ -19,6 +19,9 @@
 
 <link rel="stylesheet" href="{% static 'css/all.css' %}" />
   <link rel="stylesheet" href="{% static 'css/home.css' %}" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+
 {%comment%}
 <!-- 
 <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -387,7 +390,7 @@ data-show-facepile="false"
       
               <div class="homePageNewsLetterBackground">
                   <h1 class="text-center homePageNewsLetterHeader" >GET NOTIFIED WHEN WE POST SOMETHING NEW!</h1>
-                  <input class="text-gray homePageNewsLetterInput"  type="email" placeholder="Email">
+                  <input class="text-gray homePageNewsLetterInput"  type="email" placeholder="Enter your email">
                   <button class="btn btn-dark rounded-0 mt-3 homePageNewsLetterButton" id="newsletter_button">SUBSCRIBE</button>
       
       
