--- a/website/templates/website/post.html
+++ b/website/templates/website/post.html
@@ -9,6 +9,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="{% static 'css/post.css' %}" />
 <link rel="stylesheet" href="{% static 'css/all.css' %}" />
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+
 
 
       <div class="Outer container-md ">
@@ -118,7 +121,7 @@
       
               <div class="homePageNewsLetterBackground">
                   <h1 class="text-center homePageNewsLetterHeader" >GET NOTIFIED WHEN WE POST SOMETHING NEW!</h1>
-                  <input class="text-gray homePageNewsLetterInput"  type="email" placeholder="Email">
+                  <input class="text-gray homePageNewsLetterInput"  type="email" placeholder="Enter your email">
                   <button class="btn btn-dark rounded-0 mt-3 homePageNewsLetterButton" id="newsletter_button">SUBSCRIBE</button>
       
       
