--- a/static/css/home.css
+++ b/static/css/home.css
@@ -62,7 +62,7 @@
 }
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap");
 .forEachRowHomePageTextHeaderMobile {
-  font-family: "Soure Sans Pro", sans-serif;
+  /* font-family: "Soure Sans Pro", sans-serif; */
 }
 
 /* /*  
@@ -661,17 +661,20 @@ padding: 40px;
 
   /* NEWSLETTER SECTION */
 
+  
   .homePageNewsLetterSection {
     display: flex;
     align-items: center;
     justify-content: center;
+    
+
   }
 
   .homePageNewsLetterBackground {
     margin-top: 40px;
     background-color: #c92020;
-    width: 90vw;
-    height: 27vh;
+    width: 400px;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -681,19 +684,28 @@ padding: 40px;
     font-size: 13px;
     width: 80%;
     font-weight: bold;
-    padding-bottom: 15px;
+    padding: 31px  0 26px 0;
     color: white;
   }
   .homePageNewsLetterInput {
     width: 80%;
-    height: 20%;
+    height: 30px;
     border: none;
   }
 
   .homePageNewsLetterButton {
-    width: 40vw;
-    font-size: 14px;
+    width: 40%;
+    font-size: 13px;
+    margin-bottom: 30px;
   }
+ ::placeholder{
+  margin-top: -10px;
+  padding-left: 16px;
+  margin-bottom: 19px;
+  font-size: 12px;
+  font-weight: 300;
+}
+
 }
 
 /* LAPTOP ONLY */
@@ -733,6 +745,11 @@ padding: 40px;
     width: 40vw;
     padding-bottom: 5vh;
   }
+.forEachRowHomePageCategorytMobileSeperate{
+
+  font-family: "Playfair Display", serif;
+
+}
 
   .homePageFirstSection2 {
     display: flex;
@@ -770,9 +787,11 @@ padding: 40px;
   }
 
   .homePageWhatHeaderText {
-    font-size: 10px;
-    width: 44vw;
+    font-size: 14px;
+    font-family: "Playfair Display", serif;
+    width: 50%;
     padding-left: 13px;
+  
   }
   .homePageWhatH1 {
     float: left !important;
@@ -785,23 +804,28 @@ padding: 40px;
 
   .homePageWhatRow {
     display: flex;
+  
 
     align-items: center;
     padding-bottom: 2vh;
   }
 
-  /* NEWS SECTION */
+ 
+  /* NEWSLETTER SECTION */
+
   .homePageNewsLetterSection {
     display: flex;
     align-items: center;
     justify-content: center;
+    
+
   }
 
   .homePageNewsLetterBackground {
     margin-top: 40px;
     background-color: #c92020;
-    width: 50vw;
-    height: 27vh;
+    width: 400px;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -811,19 +835,27 @@ padding: 40px;
     font-size: 13px;
     width: 80%;
     font-weight: bold;
-    padding-bottom: 15px;
+    padding: 31px  0 26px 0;
     color: white;
   }
   .homePageNewsLetterInput {
     width: 80%;
-    height: 20%;
+    height: 30px;
     border: none;
   }
 
   .homePageNewsLetterButton {
-    width: 20vw;
-    font-size: 14px;
+    width: 40%;
+    font-size: 13px;
+    margin-bottom: 30px;
   }
+ ::placeholder{
+  margin-top: -10px;
+  padding-left: 16px;
+  margin-bottom: 19px;
+  font-size: 12px;
+  font-weight: 300;
+}
 
   /* OUTER TABLES SECTIOIN  */
 
@@ -944,6 +976,12 @@ padding: 40px;
     align-items: center;
   }
 
+  .homePageWhatHeaderText {
+    padding-left: 10px;
+    font-size: 13px;
+    font-family: "Playfair Display", serif;
+  }
+
   .homePageWhatH1 {
     font-size: 13px;
     font-weight: bold;
@@ -952,45 +990,52 @@ padding: 40px;
     margin: 0 auto;
   }
   .homePageWhatSection {
-    font-family: "Source Sans Pro", sans-serif;
+    
   }
+/* NEWSLETTER SECTION */
 
-  /* NEWSLETTER SECTION */
+.homePageNewsLetterSection {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  float: left;
+}
 
-  .homePageNewsLetterSection {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    float: left;
-  }
+.homePageNewsLetterBackground {
+  margin-top: 40px;
+  background-color: #c92020;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.homePageNewsLetterHeader {
+  font-size: 13px;
+  width: 80%;
+  font-weight: bold;
+  padding: 31px  0 26px 0;
+  color: white;
+}
+.homePageNewsLetterInput {
+  width: 80%;
+  height: 30px;
+  border: none;
+}
 
-  .homePageNewsLetterBackground {
-    margin-top: 40px;
-    background-color: #c92020;
-    width: 23vw;
-    height: 27vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-  }
-  .homePageNewsLetterHeader {
-    font-size: 13px;
-    width: 30%;
-    font-weight: bold;
-    padding-bottom: 15px;
-    color: white;
-  }
-  .homePageNewsLetterInput {
-    width: 30%;
-    height: 20%;
-    border: none;
-  }
-
-  .homePageNewsLetterButton {
-    width: 20vw;
-    font-size: 14px;
-  }
+.homePageNewsLetterButton {
+  width: 40%;
+  font-size: 13px;
+  margin-bottom: 30px;
+}
+::placeholder{
+margin-top: -10px;
+padding-left: 16px;
+margin-bottom: 19px;
+font-size: 12px;
+font-weight: 300;
+}
 }
 
 /* FULLSCREEN 😎 */
@@ -1000,7 +1045,11 @@ padding: 40px;
   }
 
   .container-md {
-    max-width: 80%;
+    max-width: 62%;
+    display: flex;
+    
+    
+    justify-content: space-between;
   }
   .outer {
     display: flex;
@@ -1011,11 +1060,11 @@ padding: 40px;
   .homePageFirstSection {
   }
   .forEachRowImageMobile {
-    width: 22vw;
+    width: 20vw;
   }
 
   .forEachRowHomePageTextMobile {
-    padding-left: 3vw;
+    padding-left: 2vw;
   }
 
   .forEachRowHomePageCategorytMobile {
@@ -1031,7 +1080,7 @@ padding: 40px;
   }
 
   .forEachRowHomePageTextHeaderMobile {
-    width: 25vw;
+    width: 18vw;
     padding-bottom: 5vh;
     font-size: 22px;
   }
@@ -1049,10 +1098,12 @@ padding: 40px;
     display: inline-block !important;
   }
   .secondSectionDesktop {
-    display: inline-block !important;
-    width: 33%;
+    
+    width: 45%;
+    padding-left: 8%;
     vertical-align: top;
-    float: right;
+    
+    
   }
 
   /* FACEBOOK SECTION */
@@ -1086,7 +1137,7 @@ padding: 40px;
   /* WHAT WE DO SECGTION */
 
   .homePageWhatImage {
-    width: 6vw;
+    width: 5vw;
     height: auto;
   }
 
@@ -1097,7 +1148,9 @@ padding: 40px;
   }
   .homePageWhatHeaderText {
     padding-left: 10px;
-    font-size: 13px;
+    font-size: 14px;
+    font-family: "Playfair Display", serif;
+    width: 70%;
   }
   .homePageWhatH1 {
     font-size: 13px;
@@ -1105,11 +1158,12 @@ padding: 40px;
     padding-top: 5vh;
     padding-bottom: 3vh;
     margin: 0 auto;
+    display: inline-block;
   }
 
   .homePageWhatSection {
-    font-family: "Lato", sans-serif;
-    font-weight: bold;
+   float: right !important;
+    
   }
 
   /* NEWSLETTER SECTION */
@@ -1124,8 +1178,8 @@ padding: 40px;
   .homePageNewsLetterBackground {
     margin-top: 40px;
     background-color: #c92020;
-    width: 23vw;
-    height: 27vh;
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1133,22 +1187,29 @@ padding: 40px;
   }
   .homePageNewsLetterHeader {
     font-size: 13px;
-    width: 30%;
+    width: 80%;
     font-weight: bold;
-    padding-bottom: 15px;
+    padding: 31px  0 26px 0;
     color: white;
   }
   .homePageNewsLetterInput {
-    width: 30%;
-    height: 20%;
+    width: 80%;
+    height: 30px;
     border: none;
   }
 
   .homePageNewsLetterButton {
-    width: 20vw;
-    font-size: 14px;
+    width: 40%;
+    font-size: 13px;
+    margin-bottom: 30px;
   }
-
+ ::placeholder{
+  margin-top: -10px;
+  padding-left: 16px;
+  margin-bottom: 19px;
+  font-size: 12px;
+  font-weight: 300;
+}
   nav {
     height: 49px;
   }
@@ -1156,4 +1217,9 @@ padding: 40px;
   #logo {
     display: block;
   }
+
+
+
+ 
 }
+
