--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -229,7 +229,7 @@ data-show-facepile="false"
 
         <div class="homePageNewsLetterBackground">
             <h1 class="text-center homePageNewsLetterHeader" >GET NOTIFIED WHEN WE POST SOMETHING NEW!</h1>
-            <input class="text-gray homePageNewsLetterInput"  type="email" placeholder="Email">
+            <input class="text-gray homePageNewsLetterInput"  type="email" placeholder="Enter your email">
             <button class="btn btn-dark rounded-0 mt-3 homePageNewsLetterButton" id="newsletter_button">SUBSCRIBE</button>
 
 
